--- a/index.html
+++ b/index.html
@@ -451,6 +451,51 @@
             width: 100%;
         }
 
+        /* Ladder Animation Styles */
+        .ladder-container {
+            transform-style: preserve-3d;
+        }
+        .ladder-container::before,
+        .ladder-container::after {
+            content: '';
+            position: absolute;
+            width: 6px;
+            height: 100%;
+            background-color: #888;
+            top: 0;
+            border-radius: 3px;
+        }
+        .ladder-container::before {
+            left: 0;
+        }
+        .ladder-container::after {
+            right: 0;
+        }
+        .ladder-rungs {
+            position: absolute;
+            top: -15vh;
+            left: 8px;
+            width: 44px;
+            height: 8px;
+            background: transparent;
+            animation: climb 1.5s linear infinite;
+            box-shadow:
+                0 0 0 4px #ccc,
+                0 15vh 0 4px #ccc,
+                0 30vh 0 4px #ccc,
+                0 45vh 0 4px #ccc,
+                0 60vh 0 4px #ccc,
+                0 75vh 0 4px #ccc;
+        }
+        @keyframes climb {
+            from {
+                transform: translateY(0);
+            }
+            to {
+                transform: translateY(15vh);
+            }
+        }
+
         /* Responsive Design Improvements */
         @media (max-width: 1200px) {
             .top-nav {
@@ -591,7 +636,7 @@
                 <div class="header-content">
                     <div class="contact-card">
                         <h2><i class="fas fa-lightbulb" aria-hidden="true"></i> Core Insight</h2>
-                        <p>Bernstein's concepts of vertical and horizontal knowledge structures offer a powerful lens for understanding how academic disciplines organize knowledge, which directly informs the academic literacies model's focus on the social practices of reading and writing.</p>
+                        <p>Bernstein's concepts of vertical and horizontal knowledge structures offer a powerful lens for understanding how academic disciplines organise knowledge, which directly informs the academic literacies model's focus on the social practices of reading and writing.</p>
                     </div>
                 </div>
             </header>
@@ -607,11 +652,19 @@
                             </h2>
                         </div>
                         <div class="card__body">
-                            <img src="https://images.unsplash.com/photo-1503376780353-7e6692767b70?auto=format&fit=crop&w=600&h=200&q=80"
-                                 alt="Hierarchical structure like a pyramid or building blocks stacking up"
-                                 class="card__image">
-                            <p>Bernstein's concept of vertical knowledge structures describes knowledge organized hierarchically, where concepts build systematically upon previous ones. This creates a cumulative, integrated framework typical in disciplines like physics or mathematics, where foundational principles underpin more complex theories. These structures allow for strong classification and framing, meaning boundaries between knowledge areas are clearly defined, and the rules for acquiring and using knowledge are explicit and consistent.</p>
-                            <p>Applying this to academic literacies, vertical structures correspond to disciplines where writing practices are highly codified and cumulative. Students learning within these structures must master specific genres and conventions that build upon each other. The academic literacies model helps reveal how these explicit rules (strong framing) shape the literacy practices students must learn, emphasizing the epistemological demands and the specific ways of meaning-making required in these fields.</p>
+                            <!-- Replaced Image Section with Ladder Animation -->
+                            <div style="position: relative; width: 100%; height: 220px; background-color: #000; border-radius: 8px; margin-bottom: 15px; border: 2px solid rgba(207, 64, 255, 0.3); overflow: hidden;">
+                                <div class="ladder-container" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 60px; height: 180px;">
+                                    <div class="ladder-rungs"></div>
+                                </div>
+                                <div style="position: absolute; bottom: 5px; width: 100%; text-align: center; color: #ddd; font-size: 0.75rem; padding: 0 5px; box-sizing: border-box;">
+                                    Ladder representing cumulative, hierarchical knowledge structure.
+                                </div>
+                            </div>
+                            <!-- End of Replaced Image Section -->
+
+                            <p>Bernstein's concept of vertical knowledge structures describes knowledge organised hierarchically, where concepts build systematically upon previous ones. This creates a cumulative, integrated framework typical in disciplines like physics or mathematics, where foundational principles underpin more complex theories. These structures allow for strong classification and framing, meaning boundaries between knowledge areas are clearly defined, and the rules for acquiring and using knowledge are explicit and consistent.</p>
+                            <p>Applying this to academic literacies, vertical structures correspond to disciplines where writing practices are highly codified and cumulative. Students learning within these structures must master specific genres and conventions that build upon each other. The academic literacies model helps reveal how these explicit rules (strong framing) shape the literacy practices students must learn, emphasising the epistemological demands and the specific ways of meaning-making required in these fields.</p>
                             <blockquote class="card__quote">
                                 <i class="fas fa-quote-left" aria-hidden="true"></i> In vertical structures, knowledge is cumulative, building upon itself in a coherent, integrated way.
                             </blockquote>
@@ -623,7 +676,7 @@
                             </div>
                         </div>
                         <footer class="card__footer">
-                            Characterized by systematic progression and integration of concepts.
+                            Characterised by systematic progression and integration of concepts.
                         </footer>
                     </div>
 
@@ -639,7 +692,7 @@
                                  alt="Segmented structure like separate boxes or puzzle pieces"
                                  class="card__image">
                             <p>Bernstein's horizontal knowledge structures are segmented, consisting of distinct, often unrelated approaches or languages within a field. These lack a single integrating framework, leading to weaker classification and framing. Boundaries between knowledge areas are less defined, and the rules for acquiring and using knowledge can be more ambiguous or context-dependent. This is typical in fields like the humanities, where different theories (e.g., Marxist, feminist, postcolonial) coexist without a unifying principle.</p>
-                            <p>The academic literacies model is particularly valuable for understanding horizontal structures. It highlights how students must navigate diverse, often competing genres and discourses within these fields. The model emphasizes the situated nature of literacy practices, where meaning, identity, and power are negotiated differently in each segmented area. Rather than a single, correct way to write or argue, students must learn to adapt their literacy practices to the specific, often context-dependent rules (weaker framing) of each segment.</p>
+                            <p>The academic literacies model is particularly valuable for understanding horizontal structures. It highlights how students must navigate diverse, often competing genres and discourses within these fields. The model emphasises the situated nature of literacy practices, where meaning, identity, and power are negotiated differently in each segmented area. Rather than a single, correct way to write or argue, students must learn to adapt their literacy practices to the specific, often context-dependent rules (weaker framing) of each segment.</p>
                             <blockquote class="card__quote">
                                 <i class="fas fa-quote-left" aria-hidden="true"></i> In horizontal structures, knowledge areas exist side-by-side, often incommensurable with each other.
                             </blockquote>
@@ -651,7 +704,7 @@
                             </div>
                         </div>
                         <footer class="card__footer">
-                            Characterized by distinct, parallel, and often unrelated knowledge areas.
+                            Characterised by distinct, parallel, and often unrelated knowledge areas.
                         </footer>
                     </div>
                 </div>
@@ -672,7 +725,7 @@
                                  alt="Students switching between different communication modes in classroom setting"
                                  class="card__image">
                             <p>Bernstein's framework helps us understand the complexity of student experience in navigating academic literacies. The requirement to switch between genres (e.g., from discussion notes to essays) and modes (e.g., from speech to writing) reflects the underlying structure of the knowledge domain. In vertical structures, these transitions often involve applying learned principles in new, but related, contexts. In horizontal structures, the transitions can be more abrupt, moving between fundamentally different ways of thinking and writing.</p>
-                            <p>The academic literacies model, drawing on New Literacy Studies, emphasizes that these shifts are not merely technical. Each genre and mode embodies different social meanings, identities, and power relations. Students must learn not just the forms, but the social practices embedded within them. Understanding this through a Bernsteinian lens reveals how the classification and framing of the underlying knowledge influences the difficulty and nature of these literacy transitions. Explicit pedagogy that makes these demands visible is crucial.</p>
+                            <p>The academic literacies model, drawing on New Literacy Studies, emphasises that these shifts are not merely technical. Each genre and mode embodies different social meanings, identities, and power relations. Students must learn not just the forms, but the social practices embedded within them. Understanding this through a Bernsteinian lens reveals how the classification and framing of the underlying knowledge influences the difficulty and nature of these literacy transitions. Explicit pedagogy that makes these demands visible is crucial.</p>
                             <blockquote class="card__quote">
                                 <i class="fas fa-quote-left" aria-hidden="true"></i> Students must develop awareness of the different qualities associated with various genres and modes as they move between communication contexts in academic work.
                             </blockquote>
@@ -684,7 +737,7 @@
                             </div>
                         </div>
                         <footer class="card__footer">
-                            Recognizing the complex shifts students make between academic communication forms.
+                            Recognising the complex shifts students make between academic communication forms.
                         </footer>
                     </div>
 
@@ -699,8 +752,8 @@
                             <img src="https://github.com/oeybers-cpu/multimodal_grammar/blob/main/digital_communication_africa.png?raw=true"
                                  alt="Educators applying academic literacies principles in curriculum design"
                                  class="card__image">
-                            <p>Bernstein's concepts are crucial for curriculum design and pedagogy. Recognizing whether a subject area is predominantly vertical or horizontal helps educators anticipate the literacy challenges students will face. In vertical disciplines, pedagogy might focus on building a strong foundation in core genres and the explicit rules for knowledge construction. In horizontal disciplines, pedagogy must help students understand and navigate the diversity of available discourses and the contexts in which each is appropriate.</p>
-                            <p>Lea and Street's academic literacies model operationalizes this by advocating for a 'design frame' that makes the social and epistemological nature of academic tasks explicit. This aligns with Bernstein's call for pedagogic discourse that recontextualizes knowledge for learners. By understanding the underlying knowledge structure (vertical/horizontal), educators can better design learning experiences that help students understand not just *what* to write, but *why* certain forms are privileged and how they relate to broader social and disciplinary practices. This moves beyond deficit models to a more nuanced understanding of student learning.</p>
+                            <p>Bernstein's concepts are crucial for curriculum design and pedagogy. Recognising whether a subject area is predominantly vertical or horizontal helps educators anticipate the literacy challenges students will face. In vertical disciplines, pedagogy might focus on building a strong foundation in core genres and the explicit rules for knowledge construction. In horizontal disciplines, pedagogy must help students understand and navigate the diversity of available discourses and the contexts in which each is appropriate.</p>
+                            <p>Lea and Street's academic literacies model operationalises this by advocating for a 'design frame' that makes the social and epistemological nature of academic tasks explicit. This aligns with Bernstein's call for pedagogic discourse that recontextualises knowledge for learners. By understanding the underlying knowledge structure (vertical/horizontal), educators can better design learning experiences that help students understand not just *what* to write, but *why* certain forms are privileged and how they relate to broader social and disciplinary practices. This moves beyond deficit models to a more nuanced understanding of student learning.</p>
                             <blockquote class="card__quote">
                                 <i class="fas fa-quote-left" aria-hidden="true"></i> Treating such students as collaborators in the development of the academic literacies necessary... can perhaps offer a different and more supportive route.
                             </blockquote>
@@ -708,7 +761,7 @@
                                 <span class="tag">Pedagogy</span>
                                 <span class="tag">Design Frame</span>
                                 <span class="tag">Curriculum</span>
-                                <span class="tag">Recontextualization</span>
+                                <span class="tag">Recontextualisation</span>
                             </div>
                         </div>
                         <footer class="card__footer">
@@ -730,10 +783,10 @@
                         <img src="https://github.com/oeybers-cpu/Ubuntu_2/blob/main/ubuntu.png?raw=true"
                              alt="Interconnected academic communities representing global knowledge exchange"
                              class="card__image">
-                        <p>Bernstein's theory provides a macro-level understanding of how knowledge is organized within institutions, which directly impacts access and equity. Vertical structures, with their strong rules, can be more transparent but also more exclusionary if the rules are not explicitly taught. Horizontal structures, while potentially more inclusive due to their diversity, can be confusing and lack clear pathways. Understanding these dynamics is essential for addressing issues of 'widening participation' and educational justice.</p>
-                        <p>The academic literacies model complements this by focusing on the micro-level practices of how students encounter and must master these structures. It highlights how literacy is not neutral but is deeply implicated in the reproduction or transformation of these knowledge structures. By combining Bernstein's macro view with the AL model's focus on social practice, educators gain a powerful tool for critiquing current practices and designing more equitable pedagogies that recognize and build upon the complex literacy work students perform as they navigate different forms of knowledge.</p>
+                        <p>Bernstein's theory provides a macro-level understanding of how knowledge is organised within institutions, which directly impacts access and equity. Vertical structures, with their strong rules, can be more transparent but also more exclusionary if the rules are not explicitly taught. Horizontal structures, while potentially more inclusive due to their diversity, can be confusing and lack clear pathways. Understanding these dynamics is essential for addressing issues of 'widening participation' and educational justice.</p>
+                        <p>The academic literacies model complements this by focusing on the micro-level practices of how students encounter and must master these structures. It highlights how literacy is not neutral but is deeply implicated in the reproduction or transformation of these knowledge structures. By combining Bernstein's macro view with the AL model's focus on social practice, educators gain a powerful tool for critiquing current practices and designing more equitable pedagogies that recognise and build upon the complex literacy work students perform as they navigate different forms of knowledge.</p>
                         <blockquote class="card__quote">
-                            <i class="fas fa-quote-left" aria-hidden="true"></i> Approaches to student writing and literacy in academic contexts could be conceptualized through the use of three overlapping perspectives or models.
+                            <i class="fas fa-quote-left" aria-hidden="true"></i> Approaches to student writing and literacy in academic contexts could be conceptualised through the use of three overlapping perspectives or models.
                         </blockquote>
                         <div class="card__meta">
                             <span class="tag">Implications</span>
