--- a/index.html
+++ b/index.html
@@ -538,15 +538,17 @@
         }
         .sunrise-caption {
             position: absolute;
-            bottom: 5px;
+            top: 5px; /* Position at the top */
             width: 100%;
             text-align: center;
             color: #ddd;
             font-size: 0.75rem;
-            padding: 0 5px;
+            padding: 2px 5px; /* Add padding */
             box-sizing: border-box;
+            background-color: #000; /* Black background */
             z-index: 2; /* Ensure caption is above the sun */
         }
+
 
         /* Responsive Design Improvements */
         @media (max-width: 1200px) {
@@ -696,7 +698,7 @@
             <div class="content-section">
                 <h2 class="section-title">Bernstein's Core Concepts</h2>
                 <div class="articles-container">
-                    <!-- Card 1: Vertical Knowledge -->
+                    <!-- Card 1: Vertical Knowledge (Top Left) -->
                     <div class="card">
                         <div class="card__header">
                             <h2 class="card__title">
@@ -704,16 +706,16 @@
                             </h2>
                         </div>
                         <div class="card__body">
-                            <!-- Replaced Image Section with Ladder Animation -->
+                            <!-- Ladder Animation in Top Left Card -->
                             <div style="position: relative; width: 100%; height: 220px; background-color: #000; border-radius: 8px; margin-bottom: 15px; border: 2px solid rgba(207, 64, 255, 0.3); overflow: hidden;">
                                 <div class="ladder-container" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 60px; height: 180px;">
                                     <div class="ladder-rungs"></div>
                                 </div>
-                                <div style="position: absolute; bottom: 5px; width: 100%; text-align: center; color: #ddd; font-size: 0.75rem; padding: 0 5px; box-sizing: border-box;">
+                                <div style="position: absolute; top: 5px; width: 100%; text-align: center; color: #ddd; font-size: 0.75rem; padding: 2px 5px; box-sizing: border-box; background-color: #000; z-index: 3;">
                                     Ladder representing cumulative, hierarchical knowledge structure.
                                 </div>
                             </div>
-                            <!-- End of Replaced Image Section -->
+                            <!-- End of Ladder Animation -->
 
                             <p>Bernstein's concept of vertical knowledge structures describes knowledge organised hierarchically, where concepts build systematically upon previous ones. This creates a cumulative, integrated framework typical in disciplines like physics or mathematics, where foundational principles underpin more complex theories. These structures allow for strong classification and framing, meaning boundaries between knowledge areas are clearly defined, and the rules for acquiring and using knowledge are explicit and consistent.</p>
                             <p>Applying this to academic literacies, vertical structures correspond to disciplines where writing practices are highly codified and cumulative. Students learning within these structures must master specific genres and conventions that build upon each other. The academic literacies model helps reveal how these explicit rules (strong framing) shape the literacy practices students must learn, emphasising the epistemological demands and the specific ways of meaning-making required in these fields.</p>
@@ -732,7 +734,7 @@
                         </footer>
                     </div>
 
-                    <!-- Card 2: Horizontal Knowledge -->
+                    <!-- Card 2: Horizontal Knowledge (Top Right) -->
                     <div class="card">
                         <div class="card__header">
                             <h2 class="card__title">
@@ -740,13 +742,13 @@
                             </h2>
                         </div>
                         <div class="card__body">
-                            <!-- Replaced Image Section with Sunrise Animation -->
+                            <!-- Sunrise Animation in Top Right Card -->
                             <div class="sunrise-scene">
                                 <div class="sunrise-sun"></div>
                                 <div class="sunrise-horizon"></div>
                                 <div class="sunrise-caption">Sunrise representing diverse, segmented knowledge structure.</div>
                             </div>
-                            <!-- End of Replaced Image Section -->
+                            <!-- End of Sunrise Animation -->
 
                             <p>Bernstein's horizontal knowledge structures are segmented, consisting of distinct, often unrelated approaches or languages within a field. These lack a single integrating framework, leading to weaker classification and framing. Boundaries between knowledge areas are less defined, and the rules for acquiring and using knowledge can be more ambiguous or context-dependent. This is typical in fields like the humanities, where different theories (e.g., Marxist, feminist, postcolonial) coexist without a unifying principle.</p>
                             <p>The academic literacies model is particularly valuable for understanding horizontal structures. It highlights how students must navigate diverse, often competing genres and discourses within these fields. The model emphasises the situated nature of literacy practices, where meaning, identity, and power are negotiated differently in each segmented area. Rather than a single, correct way to write or argue, students must learn to adapt their literacy practices to the specific, often context-dependent rules (weaker framing) of each segment.</p>
