--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bernstein's Knowledge Structures & Academic Literacies</title>
     <meta name="description" content="Exploring the relationship between Bernstein's Vertical and Horizontal Knowledge Structures and Lea & Street's Academic Literacies Model.">
-    <meta name="keywords" content="Bernstein, Knowledge Structures, Vertical, Horizontal, Academic Literacies, Lea & Street, Epistemology, Power, Identity, Curriculum">
+    <meta name="keywords" content="Bernstein, Knowledge Structures, Vertical, Horizontal, Academic Literacies, academic literacy, Lea & Street, Epistemology, literacy, Oscar Eybers, Power, Identity, Curriculum">
     <meta name="author" content="Dr Oscar Eybers">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&family=Exo+2:wght@300;400;600&display=swap" rel="stylesheet">
