--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bernstein's Knowledge Structures & Academic Literacies</title>
-    <meta name="description" content="Academic literacy definition and exploring the relationship between Bernstein's Vertical and Horizontal Knowledge Structures and Lea & Street's Academic Literacy Model.">
-    <meta name="keywords" content="Bernstein, Knowledge Structures, Vertical, definition, Horizontal, Academic Literacies, academic literacy, Lea & Street, Epistemology, literacy, Oscar Eybers, Power, Identity, Curriculum">
+    <meta name="description" content="Exploring the relationship between Bernstein's Vertical and Horizontal Knowledge Structures and Lea & Street's Academic Literacies Model.">
+    <meta name="keywords" content="Bernstein, Knowledge Structures, Vertical, Horizontal, Academic Literacies, Lea & Street, Epistemology, Power, Identity, Curriculum">
     <meta name="author" content="Dr Oscar Eybers">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&family=Exo+2:wght@300;400;600&display=swap" rel="stylesheet">
@@ -902,7 +902,7 @@
 
                             <p>Bernstein's concept of vertical knowledge structures describes knowledge organised hierarchically, where concepts build systematically upon previous ones. This creates a cumulative, integrated framework typical in disciplines like physics or mathematics, where foundational principles underpin more complex theories. These structures allow for strong classification and framing, meaning boundaries between knowledge areas are clearly defined, and the rules for acquiring and using knowledge are explicit and consistent.</p>
                             
-                            <!-- Image inserted between paragraphs -->
+                            <!-- Image inserted between paragraphs in Top Left Card -->
                             <img src="https://github.com/oeybers-cpu/knowledge_structures/blob/main/Vertical%20knowledge.png?raw=true" alt="Diagram of vertical knowledge structure" style="width: 100%; max-width: 400px; height: auto; margin: 15px auto; display: block; border-radius: 8px; border: 1px solid rgba(207, 64, 255, 0.3);">
 
                             <p>Applying this to academic literacies, vertical structures correspond to disciplines where writing practices are highly codified and cumulative. Students learning within these structures must master specific genres and conventions that build upon each other. The academic literacies model helps reveal how these explicit rules (strong framing) shape the literacy practices students must learn, emphasising the epistemological demands and the specific ways of meaning-making required in these fields.</p>
@@ -921,7 +921,7 @@
                         </footer>
                     </div>
 
-                    <!-- Card 2: Horizontal Knowledge (Top Right) - Includes Updated Sunrise Animation -->
+                    <!-- Card 2: Horizontal Knowledge (Top Right) - Includes Updated Sunrise Animation and Image -->
                     <div class="card">
                         <div class="card__header">
                             <h2 class="card__title">
@@ -941,6 +941,10 @@
                             <!-- End of Updated Sunrise Animation -->
 
                             <p>Bernstein's horizontal knowledge structures are segmented, consisting of distinct, often unrelated approaches or languages within a field. These lack a single integrating framework, leading to weaker classification and framing. Boundaries between knowledge areas are less defined, and the rules for acquiring and using knowledge can be more ambiguous or context-dependent. This is typical in fields like the humanities, where different theories (e.g., Marxist, feminist, postcolonial) coexist without a unifying principle.</p>
+                            
+                            <!-- Image inserted between paragraphs in Top Right Card -->
+                            <img src="https://github.com/oeybers-cpu/knowledge_structures/blob/main/jpeg%20%20(9).jpg?raw=true" alt="Diagram of horizontal knowledge structure" style="width: 100%; max-width: 400px; height: auto; margin: 15px auto; display: block; border-radius: 8px; border: 1px solid rgba(207, 64, 255, 0.3);">
+
                             <p>The academic literacies model is particularly valuable for understanding horizontal structures. It highlights how students must navigate diverse, often competing genres and discourses within these fields. The model emphasises the situated nature of literacy practices, where meaning, identity, and power are negotiated differently in each segmented area. Rather than a single, correct way to write or argue, students must learn to adapt their literacy practices to the specific, often context-dependent rules (weaker framing) of each segment.</p>
                             <blockquote class="card__quote">
                                 <i class="fas fa-quote-left" aria-hidden="true"></i> In horizontal structures, knowledge areas exist side-by-side, often incommensurable with each other.
