--- a/index.html
+++ b/index.html
@@ -205,7 +205,6 @@
             position: relative;
             z-index: 2;
             box-shadow: 0 0 30px 12px var(--sun-glow);
-            /* Updated animation to rise and set */
             animation: sun-rise-set 20s infinite ease-in-out;
         }
         .sun-rays {
@@ -219,7 +218,6 @@
             background: repeating-conic-gradient(from 0deg, var(--sun-ray-color) 0deg 3deg, transparent 3deg 20deg);
             border-radius: 50%;
             opacity: 0.8;
-            /* Updated animation to rotate and pulse */
             animation: ray-rotate 20s infinite linear, ray-pulse 4s infinite ease-in-out;
             box-shadow: 0 0 20px 6px var(--sun-ray-color);
         }
@@ -943,7 +941,7 @@
                             <p>Bernstein's horizontal knowledge structures are segmented, consisting of distinct, often unrelated approaches or languages within a field. These lack a single integrating framework, leading to weaker classification and framing. Boundaries between knowledge areas are less defined, and the rules for acquiring and using knowledge can be more ambiguous or context-dependent. This is typical in fields like the humanities, where different theories (e.g., Marxist, feminist, postcolonial) coexist without a unifying principle.</p>
 
                             <!-- Image inserted between paragraphs in Top Right Card -->
-                            <img src="https://github.com/oeybers-cpu/knowledge_structures/blob/main/jpeg%20%20(9).jpg?raw=true" alt="Diagram of horizontal knowledge structure" style="width: 100%; max-width: 400px; height: auto; margin: 15px auto; display: block; border-radius: 8px; border: 1px solid rgba(207, 64, 255, 0.3);">
+                            <img src="https://github.com/oeybers-cpu/knowledge_structures/raw/main/jpeg%20  (9).jpg" alt="Diagram of horizontal knowledge structure" style="width: 100%; max-width: 400px; height: auto; margin: 15px auto; display: block; border-radius: 8px; border: 1px solid rgba(207, 64, 255, 0.3);">
 
                             <p>The academic literacies model is particularly valuable for understanding horizontal structures. It highlights how students must navigate diverse, often competing genres and discourses within these fields. The model emphasises the situated nature of literacy practices, where meaning, identity, and power are negotiated differently in each segmented area. Rather than a single, correct way to write or argue, students must learn to adapt their literacy practices to the specific, often context-dependent rules (weaker framing) of each segment.</p>
                             <blockquote class="card__quote">
