--- a/index.html
+++ b/index.html
@@ -1004,6 +1004,43 @@
                                  alt="Educators applying academic literacies principles in curriculum design"
                                  class="card__image">
                             <p>Bernstein's concepts are crucial for curriculum design and pedagogy. Recognising whether a subject area is predominantly vertical or horizontal helps educators anticipate the literacy challenges students will face. In vertical disciplines, pedagogy might focus on building a strong foundation in core genres and the explicit rules for knowledge construction. In horizontal disciplines, pedagogy must help students understand and navigate the diversity of available discourses and the contexts in which each is appropriate.</p>
+                            Okay, I will embed the image after the second paragraph in the "Pedagogy & Design Frame" card.
+
+Here is the updated HTML code for that specific card section:
+
+```html
+                    <!-- Card 4: Pedagogy & Design Frame -->
+                    <div class="card">
+                        <div class="card__header">
+                            <h2 class="card__title">
+                                <i class="fas fa-chalkboard-teacher" aria-hidden="true"></i> Pedagogy & Design Frame
+                            </h2>
+                        </div>
+                        <div class="card__body">
+                            <img src="https://github.com/oeybers-cpu/multimodal_grammar/blob/main/digital_communication_africa.png?raw=true"
+                                 alt="Educators applying academic literacies principles in curriculum design"
+                                 class="card__image">
+                            <p>Bernstein's concepts are crucial for curriculum design and pedagogy. Recognising whether a subject area is predominantly vertical or horizontal helps educators anticipate the literacy challenges students will face. In vertical disciplines, pedagogy might focus on building a strong foundation in core genres and the explicit rules for knowledge construction. In horizontal disciplines, pedagogy must help students understand and navigate the diversity of available discourses and the contexts in which each is appropriate.</p>
+
+                            <!-- Embedded image after the 2nd paragraph -->
+                            <img src="https://github.com/oeybers-cpu/knowledge_structures/blob/main/genres4.png?raw=true" alt="Illustration of different academic genres" style="width: 100%; max-width: 500px; height: auto; margin: 15px auto; display: block; border-radius: 8px; border: 1px solid rgba(207, 64, 255, 0.3);">
+
+                            <p>Lea and Street's academic literacies model operationalises this by advocating for a 'design frame' that makes the social and epistemological nature of academic tasks explicit. This aligns with Bernstein's call for pedagogic discourse that recontextualises knowledge for learners. By understanding the underlying knowledge structure (vertical/horizontal), educators can better design learning experiences that help students understand not just *what* to write, but *why* certain forms are privileged and how they relate to broader social and disciplinary practices. This moves beyond deficit models to a more nuanced understanding of student learning.</p>
+                            <blockquote class="card__quote">
+                                <i class="fas fa-quote-left" aria-hidden="true"></i> Treating such students as collaborators in the development of the academic literacies necessary... can perhaps offer a different and more supportive route.
+                            </blockquote>
+                            <div class="card__meta">
+                                <span class="tag">Pedagogy</span>
+                                <span class="tag">Design Frame</span>
+                                <span class="tag">Curriculum</span>
+                                <span class="tag">Recontextualisation</span>
+                            </div>
+                        </div>
+                        <footer class="card__footer">
+                            Applying the model's principles to create more supportive learning environments.
+                        </footer>
+                    </div>
+```
                             <p>Lea and Street's academic literacies model operationalises this by advocating for a 'design frame' that makes the social and epistemological nature of academic tasks explicit. This aligns with Bernstein's call for pedagogic discourse that recontextualises knowledge for learners. By understanding the underlying knowledge structure (vertical/horizontal), educators can better design learning experiences that help students understand not just *what* to write, but *why* certain forms are privileged and how they relate to broader social and disciplinary practices. This moves beyond deficit models to a more nuanced understanding of student learning.</p>
                             <blockquote class="card__quote">
                                 <i class="fas fa-quote-left" aria-hidden="true"></i> Treating such students as collaborators in the development of the academic literacies necessary... can perhaps offer a different and more supportive route.
